--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- GitHub Ribbon -->
-  <a href="https://github.com/niccolomarcon/jquery-collektr"><img style="position: fixed; top: 50px; right: 0; border: 0; z-index: 9999;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+  <a href="https://github.com/niccolomarcon/jquery-collektr/#s-jquery-plugin"><img style="position: fixed; top: 50px; right: 0; border: 0; z-index: 9999;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 
   <!-- navbar -->
   <nav class="navbar navbar-default navbar-fixed-top bs-docs-nav" role="banner">
