--- a/custom.html
+++ b/custom.html
@@ -118,7 +118,7 @@
 
         $("#placeholder").collektr({
           token: "yNrgfjnz2cf7VkdRZazv",
-          selector: "landscapes-board",
+          selector: "cauterize",
           columnNumber: 2,
           templateURL: "customTemplate.html",
           customHelpers: function(){
