--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
       </div>
       <div class="panel-body">
         {{#ifContent content}}
-          <p>{{#parseLinks content}}{{/parseLinks}}</p>
+          <p style="word-wrap: break-word;">{{#parseLinks content}}{{/parseLinks}}</p>
         {{/ifContent}}
       </div>
       <div class="panel-footer">
