--- a/customTemplate.html
+++ b/customTemplate.html
@@ -1,7 +1,7 @@
 {{#each this}}
   <div class="new collektr-entry">
     <blockquote>
-      <p>{{#parseLinks content}}{{/parseLinks}}</p>
+      <p style="word-wrap: break-word;">{{#parseLinks content}}{{/parseLinks}}</p>
       <footer>{{from}} on {{#parseDate created_at}}{{/parseDate}}</footer>
     </blockquote>
   </div>
