--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="prettify.js"></script>
-  <script src="../dist/jquery.collektr.min.js"></script>
+  <script src="jquery.collektr.min.js"></script>
 
   <script>
   $(document).ready(function(){
