--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
           <a href="{{profile_url}}" target="_blank">{{from}}</a>
         </span>
       </div>
-      <div class="media-wrapper">
+      <div class="media-wrapper" style="margin: auto; width: 60%;">
         {{#switchMedia this}}{{/switchMedia}}
       </div>
       <div class="panel-body">
