--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     $("#placeholder").collektr({
       token: "yNrgfjnz2cf7VkdRZazv",
-      selector: "cauterize"
+      selector: "twitter-tagged-with-landscape"
     });
 
   });
