--- a/contain.html
+++ b/contain.html
@@ -115,7 +115,7 @@
 
     $("#placeholder").collektr({
       token: "yNrgfjnz2cf7VkdRZazv",
-      selector: "cauterize",
+      selector: "twitter-tagged-with-landscape",
       fullScreen: false
     });
 
